--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,12 @@
     padding: 0;
 }
 body{
-    background-color: bisque;
+    background-color: hsl(0, 0%, 100%);
+    color: hsl(230, 17%, 14%);
+    font-size: 20px;
+    font-family: "Montserrat", sans-serif;
+    position: relative;
+    min-height: 100vh;
 }
 header{
     display: flex;
@@ -12,15 +17,20 @@ header{
     align-items: center;
     padding: 20px;
     background-color: rgb(214, 239, 247);
+    background-color: hsl(225, 100%, 98%);
 }
 header > .logo{
     width: 40%;
     display: flex;
     justify-content: center;
+    font-family: "Playfair Display", serif;
+    color: rgb(223, 20, 20);
+    margin-left: 20px;
+    font-size: 50px;
+    margin-right: auto;
 }
 header > .logo > p{
     width: 80%;
-    
 }
 header > nav{
     width: 60%;
@@ -35,7 +45,274 @@ header > nav > ul {
 header > nav > ul a {
     text-decoration: none;
     color: goldenrod;
+    color: rgb(214, 239, 247);
 }
 header > nav > ul > li {
     margin: 0 20px;
+    background-color: hsl(230, 17%, 14%);
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
 }
+header > nav > ul > li.active{
+  background-color: green;
+}
+header > nav > ul > li.active a{
+  color: #fff;
+}
+header > nav > ul > li:hover {
+  color: hsl(230, 17%, 14%);
+  background-color: transparent;
+  border: 1px solid hsl(230, 17%, 14%);
+}
+header > nav > ul > li:hover a {
+  color: #000;
+}
+div p {
+  text-align: justify;
+  padding: 10px;
+}
+
+/* General Forms stylinng */
+form {
+  padding: 40px;
+  height: auto;
+  width: 40%;
+  margin: 30px auto;
+  border-radius: 10px;
+  /* box-shadow: 2px 2px 8px; */
+  background-color: hsl(227, 47%, 96%);
+}
+
+input {
+  border: 1px solid hsl(230, 17%, 14%);
+  height: 40px;
+  padding: 5px;
+  width: 100%;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+select {
+  border: 1px solid hsl(230, 17%, 14%);
+  height: 45px;
+  border-radius: 10px;
+  width: 100%;
+  font-size: large;
+  color: gray;
+}
+input::placeholder {
+  padding-left: 5px;
+  color: gray;
+}
+input[type="submit"] {
+  background-color: hsl(230, 17%, 14%);
+  color: #fff;
+  width: 40%;
+  height: 50px;
+  border: 0px;
+  margin: 10px 30%;
+  border-radius: 20px;
+  cursor: pointer;
+}
+label {
+  display: inline-block;
+  margin: 10px 0px;
+}
+input[type="checkbox"] {
+  background-color: black;
+  border-radius: 5px;
+  margin-right: 10px;
+  width: 18px;
+  height: 18px;
+}
+textarea {
+  margin: 5px 0px;
+  resize: none;
+  outline: none;
+  border-top: 3px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  height: 150px;
+  width: 100%;
+}
+textarea::placeholder {
+  padding-left: 5px;
+  padding-top: 5px;
+  color: gray;
+}
+input[type="submit"]:hover {
+  background-color: hsl(227, 47%, 96%);
+  color: grey;
+  border: 1px solid grey;
+}
+.row, .about-container  {
+  display: flex;
+  width: 95%;
+  background-color: hsl(227, 47%, 96%);
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  border-radius: 20px;
+  height: auto;
+  padding: 30px 10px;
+  /* box-shadow: 2px 2px 10px; */
+}
+.bio {
+  display: flex;
+  width: 95%;
+  background-color: hsl(227, 47%, 96%);
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  border-radius: 20px;
+  height: auto;
+  padding: 30px 10px;
+  /* box-shadow: 2px 2px 10px; */
+}
+.left-column {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+  font-weight: bold;
+}
+.right-column {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.about-container {
+  flex-direction: column;
+  align-items: center;
+}
+.left {
+  width: 60%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.left {
+  box-shadow: none;
+}
+.right {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 40%;
+  font-weight: bold;
+}
+.right > p {
+  margin-right: 5px;
+}
+.gray {
+  color: #918e9b;
+  margin: 20px 0;
+  text-align: left;
+}
+.mypicture {
+  width: 200px;
+  height: 200px;
+  border: 2px solid goldenrod;
+  border-radius: 50%;
+}
+div > h1 {
+  text-align: center;
+  margin: 0px;
+  padding: 10px;
+}
+.right-column > p {
+  padding-bottom: 10px;
+}
+.about {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.about-me {
+  display: flex;
+  justify-content: space-around;
+  width: 75%;
+  margin: 20px auto;
+}
+.about-me > li {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: calc(100% / 3);
+  margin: 0 10px;
+  background-color: hsl(227, 47%, 96%);
+  border-radius: 5px;
+  padding: 20px 0;
+  /* box-shadow: 2px 2px 9px; */
+}
+li h3 {
+  margin-bottom: 10px;
+}
+ul > li {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 10px;
+}
+
+.contact-me {
+  width: 50%;
+  margin: 20px 25%;
+  color: black;
+  height: 50px;
+  cursor: pointer;
+  border: 0px solid black;
+  border-radius: 10px;
+}
+.contact-me:hover {
+  color: white;
+  background-color: grey;
+}
+.consent {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  font-size: 15px;
+}
+.consent input {
+  margin: 10px 10px 0 0;
+}
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-top: 10px;
+  height: 200px;
+  background-color: hsl(230, 17%, 14%);
+}
+main {
+  padding-bottom: 200px;
+}
+
+footer > p {
+  text-align: center;
+  color: white;
+  padding: 10px;
+}
+.social-media {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+.social-media > a > img {
+  margin-right: 20px;
+  width: 30px;
+  height: 30px;
+}
+.media > .social-media{
+  display: block;
+}
+nav {
+  margin: 0;
+}
+
